--- a/Programming/index.html
+++ b/Programming/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-	<!DOCTYPE html>
-	<html>
-	<head>
-		<meta charset="utf-8">
-		<link rel="stylesheet" href="C:\Users\Home PC\Desktop\Coursera Assignment Folder/styles.css">
-		<title>Assignment Coursera</title>
-	</head>
-	<body>
+    <!DOCTYPE html>
+    <html>
+    <head>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="Coursera Assignment Folder/styles.css">
+        <title>Assignment Coursera</title>
+    </head>
+    <body>
     <div class="row">
         <div class="center">
             <h1>My List</h1>
@@ -38,4 +38,4 @@
     
 
 </body>
-	</html>
+    </html>
